# spotify-overlay

./: .gitignore  README.md  keep_above.js  launch.sh  main.py  overlay.py  pyproject.toml  spotify-overlay.desktop  spotify_dbus.py  styles.qss  test_dbus.py
components/: __init__.py
spotify_overlay/: __main__.py  overlay.py
spotify_overlay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
